istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-app
spec:
  hosts:
  - "*"
  gateways:
  - python-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: python-app
        port:
          number: 80
